# tradememory-protocol

./: CHANGELOG.md  LIMITATIONS.md  README.md  pyproject.toml
docs/research/: arxiv-paper-behavioral-drift.html  arxiv-paper-behavioral-drift.md  build_arxiv_pdf.py
scripts/: backfill_audit_chain.py
src/tradememory/: auth.py  db.py  mcp_server.py  server.py
src/tradememory/audit/: __init__.py  chain.py  merkle.py  tsa.py
src/tradememory/domain/: tdr.py
src/tradememory/owm/: anti_resonance.py
tests/: test_anti_resonance.py  test_audit_chain.py  test_auth.py  test_recall_hybrid_wireup.py  test_reflection.py  test_tsa.py
